# c8_ray_tracer

./: .gitignore  CMakeLists.txt  README.md  dev_build_all.sh  pyproject.toml  setup.py
c8_tracer/: __init__.py  nrmc_interface.py  nrmc_propagator.py
include/c8_tracer/: c8_tracer.hpp  environment.hpp  logger.hpp  plane.hpp  ray_tracer_base.hpp  signal_path.hpp  vec2.hpp  vec3.hpp
include/c8_tracer/transcribed/: CashKarpIntegrator.hpp  CosineScanner.hpp  InterpolationTableGenerator2D.hpp  InterpolationTableGenerator2D.inl  Path.hpp  Path.inl  RayTracer.hpp  RayTracer.inl  RayTracingTable.hpp  RayTracingTable.inl  brent.hpp  c8_typedefs.hpp
python/: CMakeLists.txt  bindings_sources.py  cash_karp_bindings.cpp  environment_bindings.cpp  logger_bindings.cpp  path_bindings.cpp  plane_bindings.cpp  pywrapper.cpp  raytracer_bindings.cpp  tracer_bindings.cpp  vec_bindings.cpp
python/bindings/: bindings_sources.py  cash_karp_bindings.cpp  environment_bindings.cpp  logger_bindings.cpp  pywrapper.cpp  ray_tracing_table_bindings.cpp  raytracer_bindings.cpp  vec_bindings.cpp
python/examples/: custom_refractive_profile.py  exponential_ice.py  interpolation_table.py  nrmc_example.py  nrmc_ray_tracing_class.py  nrmc_table_class.py  ray_shooter.py
python/py_test/: test_cash_karp.py  test_environment.py  test_path.py  test_plane.py  test_vec.py
python/tests/: test_cash_karp.py  test_environment.py  test_nrmc_interface.py  test_path.py  test_plane.py  test_ray_tracer.py  test_vec.py
