[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "c8_tracer"
version = "1.1.2"
description = "Standalone implementation of C8 Ray Tracer"
authors = [{ name = "Alan Coleman" }]
readme = "README.md"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
wheel.packages = ["c8_tracer"]
